update start/watch filename in package.json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "blog.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node blog.js",
-    "watch": "node --watch blog.js"
+    "start": "node app.js",
+    "watch": "node --watch app.js"
   },
   "repository": {
     "type": "git",
